feat: rota provisória de finalização da venda
